Add AndromedaSettings dashboard
Change-Id: I8543b8af6f508e2ead192c7ee1fdc9603cc5b06d
Signed-off-by: mracar07 <umutcan@umutcanacar.me>

 Conflicts:
	Android.bp
	AndroidManifest.xml
	res/values/aosap_strings.xml
	src/com/android/settings/core/gateway/SettingsGateway.java

Signed-off-by: mracar07 <umutcan@umutcanacar.me>

--- a/res/values/aosap_strings.xml
+++ b/res/values/aosap_strings.xml
@@ -43,4 +43,8 @@
     <string name="backup_transport_setting_label">Change backup provider</string>
     <string name="backup_transport_title">Select backup provider</string>
 
+    <!-- Andromeda Settings -->
+    <string name="aosap_settings_title">Andromeda Settings</string>
+    <string name="aosap_settings_summary">Explore Our Galaxy!</string>
+
 </resources>
