--- a/res/values/aosap_strings.xml
+++ b/res/values/aosap_strings.xml
@@ -47,4 +47,8 @@
     <string name="aosap_settings_title">Andromeda Settings</string>
     <string name="aosap_settings_summary">Explore Our Galaxy!</string>
 
+    <!-- Three-fingers-swipe to screenshot -->
+    <string name="swipe_to_screenshot_gesture_title">Swipe to screenshot</string>
+    <string name="swipe_to_screenshot_gesture_summary">Swipe three fingers to take screenshot</string>
+
 </resources>
